Update/Fix Main Navigation
- Simplify the classes. I'm so small brained back then
- Fix vertical overflow border overlap
- Remove unnecessary classes, leftover from past version with fixed position on center

--- a/styles.scss
+++ b/styles.scss
@@ -1311,18 +1311,9 @@ input[id^=profile-headshot-3]:checked ~ [data-target="3"] {display: block;}
     transition: z-index 0s;
   }
   & a {
-    position: absolute;
+    display: block;
     padding: 16px 8px;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
   }
-}
-div.contact-list--alt::before { // Dummy content for the tooltip one to fix layout
-  content: "";
-  display: block;
-  height: calc((var(--contact-padding-y) * 2) + var(--contact-icon-y));
 }
 .contact-icon {
   // float: left;
@@ -1348,10 +1339,9 @@ div.contact-list--alt::before { // Dummy content for the tooltip one to fix layo
   visibility: hidden;
   position: absolute;
   width: fit-content;
-  top: 100%;
   left: 0;
   right: 0;
-  padding: 1rem;
+  padding: .75rem 1rem;
   opacity: 0;
   
   cursor: text;
@@ -1369,25 +1359,23 @@ div.contact-list--alt::before { // Dummy content for the tooltip one to fix layo
 .more-link-popup {
   z-index: 9;
   background: var(--clr-secondary);
-  position: fixed;
+  position: absolute;
   visibility: hidden;
   opacity: 0;
   box-sizing: border-box;
-  margin: auto;
-  padding: 16px;
+  padding: 8px;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
-  // max-width: 320px;
+  width: 360px;
+  max-width: 100vw;
   max-height: 75vh;
-  height: fit-content;
   overflow: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
   
-  border: 2px solid var(--clr-border);
-  border-image: url(/img/border-1-default-alt.png) 6 / 16px;
+  border-image: url(/img/border-1-default-alt.png) 6 / 16px / 8px;
   // transform: scale(.88) translate(0) rotateZ(4deg);
   transition: opacity .25s, transform .5s, visibility .5s;
 }
@@ -1400,11 +1388,10 @@ div.contact-list--alt::before { // Dummy content for the tooltip one to fix layo
 // Desktop is separated for now because i'm not sure if this will stay
 @media (min-width: 769px) {
   .more-link-popup {
-    position: absolute;
-    top: 72px;
+    top: 88px;
+    right: -8px;
     left: unset;
     bottom: unset;
-    width: 384px;
     // border-image: url(/img/border-1-default-alt.png) 6 / 0 16px 16px 16px / 0 4px 4px 4px;
     transform: translateY(-8px);
     transition: opacity .25s, transform 0s .25s, visibility .25s;
@@ -1418,10 +1405,8 @@ div.contact-list--alt::before { // Dummy content for the tooltip one to fix layo
     top: unset;
     left: unset;
     bottom: 83px;
-    max-width: 320px;
-    width: 100%;
 
-    border-image: url(/img/border-1-default-alt.png) 6 / 16px 0 0 16px / 4px 0 0 4px; // Remove right and bottom border image + outset. Affected by .nav-main and .nav-list size
+    border-image: url(/img/border-1-default-alt.png) 6 / 16px 0 0 16px / 8px 0 0 8px; // Remove right and bottom border image + outset. Affected by .nav-main and .nav-list size
     border-bottom: 0; // This remove the invisible border
     border-right: 0;
     // transform: none; // Reset transformation
